--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "event-stream": "^4.0.1",
     "history": "^4.7.2",
     "prop-types": "^15.6.1",
+    "rc-color-picker": "^1.2.6",
     "react": "^16.3.1",
+    "react-canvas-draw": "^1.0.0",
+    "react-color": "^2.17.0",
     "react-dom": "^16.3.1",
     "react-mailchimp-subscribe": "^2.0.2",
     "react-redux": "^6.0.0",
