feat: add text add canvas

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eth-contract-metadata": "^1.9.0",
     "ethereumjs-util": "^6.0.0",
     "event-stream": "^4.0.1",
+    "fabric": "^2.6.0",
     "history": "^4.7.2",
     "prop-types": "^15.6.1",
     "rc-color-picker": "^1.2.6",
@@ -19,6 +20,7 @@
     "react-canvas-draw": "^1.0.0",
     "react-color": "^2.17.0",
     "react-dom": "^16.3.1",
+    "react-fabricjs": "^0.1.6",
     "react-mailchimp-subscribe": "^2.0.2",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.2.2",
